update examples and test

--- a/example/composer.html
+++ b/example/composer.html
@@ -75,7 +75,7 @@ textarea {
 }
 </style>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<script src="https://unpkg.com/datacash"></script>
+<script src="https://unpkg.com/@cyio/datacash"></script>
 <script>
 var endpoint = "https://chainfeed.org/send";
 document.addEventListener("DOMContentLoaded", function(event) {
