--- a/example/playground.html
+++ b/example/playground.html
@@ -75,7 +75,7 @@ body {
 }
 </style>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<script src="https://unpkg.com/datacash"></script>
+<script src="https://unpkg.com/@cyio/datacash"></script>
 <script>
 var endpoint = "https://chainfeed.org/send";
 var transaction = null;
